<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img_hkcentrallib"
    tools:context=".activity.ActLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHello"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_textview"
            android:gravity="center"
            android:text="@string/welcome_statement"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <EditText
            android:id="@+id/etUsername"
            style="@style/input_box"
            android:layout_gravity="center"
            android:hint="@string/enter_username_here"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etPw"
            style="@style/input_box"
            android:layout_gravity="center"
            android:hint="@string/enter_password_here"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>